# libsodium-ffi

./: Cargo.toml  README.md
libsodium-sys/: Cargo.toml  build.rs
libsodium-sys/src/: bindings.rs  lib.rs
src/: crypto.rs  lib.rs  randombytes.rs
src/crypto/: auth.rs  generichash.rs
tests/: integration_test.rs
